Fixed mission height issue on mobile.

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -80,6 +80,7 @@
 }
 
 .tt-home__mission__cont {
+  height: 100%;
   padding: 50px 30px 85px 65px;
   display: flex;
   flex-direction: column;
